WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294047
Crash when floating, before pseudo content inside input changes
https://bugs.webkit.org/show_bug.cgi?id=294047
Summary
Crash when floating, before pseudo content inside input changes
Sammy Gill
Reported
2025-06-04 15:13:20 PDT
If you have floating before/after pseudo content inside an input element and change that content, you can have a crash from a RELEASE_ASSERT in WeakRef. This stems from the fact that this content is being stored in a RenderFlexibleBox that is not being cleaned up properly
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2025-06-04 15:13:42 PDT
rdar://144403747
Sammy Gill
Comment 2
2025-06-04 15:33:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46285
EWS
Comment 3
2025-06-05 20:14:13 PDT
Committed
295904@main
(3360d015ac9a): <
https://commits.webkit.org/295904@main
> Reviewed commits have been landed. Closing PR #46285 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug