RenderSlider cannot have generated content. https://bugs.webkit.org/show_bug.cgi?id=294047 rdar://144403747

Reviewed by Alan Baradlay.

<input type="range"> creates a RenderSlider which inherits from
RenderFlexibleBox. If you add some before/after floating pseudo content
and then mutate the content, this can result in a crash via a
RELEASE_ASSERT in WeakRef. This is because we fail to clean up some
caches in RenderFlexibleBox since that is an unexpected state for us to
be in.

Other renderers based on input elements, such as RenderTextControl,
override canHaveGeneratedChildren to indicate whether or not they
can have pseudo content. It seems like we do not typically allow
generated content on inputs with buttons being the sole exception. This
makes RenderSlider consistent with the other types of content/renderers.

Canonical link: https://commits.webkit.org/295904@main